# Vardan

./: .editorconfig  .gitattributes  .gitignore  LICENSE  Readme.md  environment.yml  pyproject.toml  requirements.txt
configs/: dataset.yaml  evaluation.yaml  logging.yaml  preprocessing.yaml  training.yaml
data/: README.md
data/metadata/: dronerf_metadata.csv
docs/phase-1-rf/: README.md
notebooks/: 01_DroneRF_Dataset_Exploration.ipynb  02_DroneRF_Signal_Characterization.ipynb  02_RF_Signal_Processing.ipynb  03_Baseline_Model_Reproduction.ipynb  04_Benchmarking.ipynb  05_Vardhan_RF_Module.ipynb  06_Acoustic_Module.ipynb  07_Vision_Module.ipynb  08_Multimodal_Fusion.ipynb  09_Experiments.ipynb  README.md
reports/literature/: literature_notes.md
reports/notes/: meeting_notes.md
reports/paper/: paper_outline.md
reports/weekly_logs/: weekly_logs.md
src/: __init__.py  constants.py
src/benchmark/: __init__.py  bench.py
src/data/: __init__.py  loader.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  extraction.py
src/fusion/: __init__.py  fusion.py
src/models/: __init__.py  baselines.py  vardhan.py
src/preprocessing/: __init__.py  signals.py
src/utils/: __init__.py  helpers.py  paths.py
src/visualization/: __init__.py  plots.py
tests/: test_imports.py
