[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vardan"
version = "0.1.0"
description = "Vardan: A Portable Indigenous Multi-Modal Counter-UAS System using AI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Adith Narayan G" },
    { name = "S J Yuvan Dhurkesh" },
    { name = "Subash Santhanam K" },
    { name = "Sisthick S" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
    "librosa>=0.10.0",
    "pyyaml>=6.0",
    "h5py>=3.8.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "black>=23.3.0",
    "ruff>=0.0.270",
    "pytest>=7.3.0",
    "ipykernel>=6.23.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["data", "preprocessing", "features", "visualization", "models", "evaluation", "benchmark", "fusion", "utils"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
